Fix for issue #978 - last row of cards misaligned
Changed flex property, also refactored duplicated styles to use CSS Modules 'composes' property

--- a/src/scenes/home/team/team.css
+++ b/src/scenes/home/team/team.css
@@ -2,14 +2,11 @@
   align-items: flex-start;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .staffMembers {
-  align-items: flex-start;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
+  composes: boardMembers;
   padding: 20px 0;
 }
 
